Completed Assertion model card with tests.